# FireHorseCoding

./: .gitignore  AMENDMENTS.md  ATTIC.md  CHARTER-REVIEW.md  Directory.Build.props  FireHorseCoding.slnx  README.md  WORKPLAN.md
.claude/: launch.json
Gneiss/: CHARTER.md  KNOWLEDGE_MODEL_BRAINSTORM.md  README.md  ROADMAP.md  THE-STORY-SO-FAR.md
Gneiss/kb/: 00-INDEX.md  01-PROBLEM-FRAME.md  02-GLOSSARY.md  03-NOTATION.md  04-BEDROCK-OPERATIONAL.md  05-CODD-PROGRAM.md  06-POSITIONING.md  10-SURVEY-TEMPORAL-DATA.md  11-SURVEY-KR-BELIEF.md  12-SURVEY-INDUSTRY.md  13-SURVEY-INCREMENTAL.md  14-PRIOR-ART-MATRIX.md  16-SURVEY-LOGICS.md  17-SURVEY-WIKI.md  18-SURVEY-INTENTIONAL.md  19-MINE-SYNTHESIS.md  19A-SURVEY-AUGMENTATION.md  19B-SURVEY-PARC-VPRI.md  19C-SURVEY-NEAR-MISSES.md  20-KERNEL.md  21-TIME.md  22-BELIEF-ENGINE.md  23-STORAGE.md  24-CONTEXTS.md  25-IMPERFECTION.md  26-DECIDERS.md  27-EVOLUTION.md  28-FLUID-WORLDS.md  29-ENVELOPE.md  30-SCOPE-ONION.md  31-PROTOTYPES.md  32-RISKS.md  33-FUTURE-TENSE.md  34-PRESENTATION.md  35-INTENT.md  36-FRANKENSIM-STUDY.md  37-KODEPORTER-REALIZATION.md  40-DISCUSSION-AGENDA.md  41-KAY-COUNSEL.md  50-MAXWELL-HUNT.md  (+1 more)
KodePorter/: CHARTER.md  KodePorter_Brainstorming_Notes.md  README.md  ROADMAP.md
KodePorter/docs/: brainstorming-and-project-framing.md
KodePorter/guidance/: LEARNING-LOOP.md  PLAYBOOK.md
fixtures/slice-zero/: .gitattributes  (+3 more)
fixtures/slice-zero/tools/rust-map-dump/: Cargo.toml
fixtures/slice-zero/tools/rust-map-dump/src/: main.rs
governance/: LENS.html  ledger-export.jsonl
orchestration/: PLAYBOOK.md
(+191 files in other folders)
